updated styling on a few div's to prevent overlap

--- a/public/client/style.css
+++ b/public/client/style.css
@@ -25,6 +25,11 @@ body
 	width: 400px;
 }
 
+div > form {
+	padding-top:16px;
+	padding-left:5px;
+}
+
 .search-bar {
 	position:absolute;
 	bottom:25px;
